# recipeWebApp

./: db.sqlite3  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/recipes/: about.html  base.html  home.html  recipe_detail.html  recipe_form.html
users/: forms.py  views.py
users/templates/users/: login.html  logout.html  profile.html  register.html
